--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,6 @@ refactor: true
 panel_includes:
   - toc
 tail_includes:
-  - related-posts
-  - post-nav
   - comments
 ---
 
@@ -16,6 +14,7 @@ tail_includes:
     <h1 data-toc-skip>{{ page.title }}</h1>
 
     <div class="post-meta text-muted">
+      {% comment %}
       <!-- published date -->
       <span>
         {{ site.data.locales[lang].post.posted }}
@@ -28,7 +27,8 @@ tail_includes:
           {{ site.data.locales[lang].post.updated }}
           {% include datetime.html date=page.last_modified_at tooltip=true lang=lang %}
         </span>
-      {% endif %}
+	{% endif %}
+	{% endcomment %}
 
       {% if page.image %}
         {% capture src %}src="{{ page.image.path | default: page.image }}"{% endcapture %}
@@ -48,34 +48,7 @@ tail_includes:
       {% endif %}
 
       <div class="d-flex justify-content-between">
-        <!-- author(s) -->
-        <span>
-          {% if page.author %}
-            {% assign authors = page.author %}
-          {% elsif page.authors %}
-            {% assign authors = page.authors %}
-          {% endif %}
-
-          {{ site.data.locales[lang].post.written_by }}
-
-          <em>
-            {% if authors %}
-              {% for author in authors %}
-                {% if site.data.authors[author].url -%}
-                  <a href="{{ site.data.authors[author].url }}">{{ site.data.authors[author].name }}</a>
-                {%- else -%}
-                  {{ site.data.authors[author].name }}
-                {%- endif %}
-                {% unless forloop.last %}{{ '</em>, <em>' }}{% endunless %}
-              {% endfor %}
-            {% else %}
-              <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>
-            {% endif %}
-          </em>
-        </span>
-
-        <!-- read time -->
-        {% include read-time.html content=content prompt=true lang=lang %}
+       
       </div>
       <!-- .d-flex -->
     </div>
@@ -87,6 +60,7 @@ tail_includes:
   </div>
 
   <div class="post-tail-wrapper text-muted">
+    {% comment %}
     <!-- categories -->
     {% if page.categories.size > 0 %}
       <div class="post-meta mb-3">
@@ -111,14 +85,16 @@ tail_includes:
           </a>
         {% endfor %}
       </div>
-    {% endif %}
+      {% endif %}
+      {% endcomment %}
 
     <div
       class="
         post-tail-bottom
         d-flex justify-content-between align-items-center mt-5 pb-2
       "
-    >
+      >
+      {% comment %}
       <div class="license-wrapper">
         {% if site.data.locales[lang].copyright.license.template %}
           {% capture _replacement %}
@@ -130,8 +106,8 @@ tail_includes:
           {{ site.data.locales[lang].copyright.license.template | replace: ':LICENSE_NAME', _replacement }}
         {% endif %}
       </div>
+      {% endcomment %}
 
-      {% include post-sharing.html lang=lang %}
     </div>
     <!-- .post-tail-bottom -->
   </div>
