--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,12 @@ layout: compress
 
           <!-- panel -->
           <aside aria-label="Panel" id="panel-wrapper" class="col-xl-3 ps-2 mb-5 text-muted">
+	    {% comment %}
             <div class="access">
               {% include_cached update-list.html lang=lang %}
               {% include_cached trending-tags.html lang=lang %}
             </div>
+	    {% endcomment %}
 
             {% for _include in layout.panel_includes %}
               {% assign _include_path = _include | append: '.html' %}
@@ -58,7 +60,9 @@ layout: compress
           </div>
         </div>
 
+	{% comment %}
         {% include_cached search-results.html lang=lang %}
+	{% endcomment %}
       </div>
 
       <aside aria-label="Scroll to Top">
@@ -82,6 +86,8 @@ layout: compress
       {% include mermaid.html %}
     {% endif %}
 
+    {% comment %}
     {% include_cached search-loader.html %}
+    {% endcomment %}
   </body>
 </html>
