--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -308,30 +308,7 @@ sup {
 
 /* --- post --- */
 
-.preview-img {
-  aspect-ratio: 40 / 21;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
 
-  @extend %rounded;
-
-  &:not(.no-bg) {
-    background: var(--img-bg);
-  }
-
-  img {
-    height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
-
-    @extend %rounded;
-
-    @at-root #post-list & {
-      width: 100%;
-    }
-  }
-}
 
 .post-preview {
   @extend %rounded;
@@ -375,7 +352,7 @@ main {
     }
   }
 
-  .categories,
+  .categories,GG
   #tags,
   #archives {
     a:not(:hover) {
@@ -396,6 +373,10 @@ main {
   em {
     @extend %normal-font-style;
   }
+}
+
+.card-content {
+
 }
 
 .content {
@@ -716,6 +697,7 @@ $btn-mb: 0.5rem;
 
   #avatar {
     display: block;
+    margin: 0 auto; /* Center horizontally */
     width: 7rem;
     height: 7rem;
     overflow: hidden;
@@ -725,9 +707,9 @@ $btn-mb: 0.5rem;
     img {
       transition: transform 0.5s;
 
-      &:hover {
-        transform: scale(1.2);
-      }
+//      &:hover {
+//        transform: scale(1.2);
+//      }
     }
   }
 
@@ -736,8 +718,9 @@ $btn-mb: 0.5rem;
     @extend %clickable-transition;
 
     padding-left: 2.5rem;
-    padding-right: 1.25rem;
+    padding-right: 2.5rem;
     width: 100%;
+    text-align: center;
   }
 
   .site-title {
