--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -47,7 +47,7 @@
   --sidebar-hover-bg: rgb(223, 233, 241, 0.64);
   --sidebar-btn-bg: white;
   --sidebar-btn-color: #8e8e8e;
-  --avatar-border-color: white;
+#  --avatar-border-color: white;
 
   /* Topbar */
   --topbar-bg: rgb(255, 255, 255, 0.7);
